--- a/noticia.html
+++ b/noticia.html
@@ -5,11 +5,16 @@
     <title>Lateral Fagner sofre Fratura</title>
 </head>
 
-<body>
+<header>
     <h1>Fagner, do Cruzeiro, sofre fratura após entrada de Pottker e vira desfalque para sequência</h1>
-   
-    <h2>Lateral se machucou na partida contra o CRB, na quarta-feira, pela Copa do Brasil; ele e atacante adversário trocaram acusações após o jogo</h2>
-   
+    <img src=logo....>
+</header>
+
+<main> 
+
+<article>
+    <body>
+        <h2>Lateral se machucou na partida contra o CRB, na quarta-feira, pela Copa do Brasil; ele e atacante adversário trocaram acusações após o jogo</h2>
     <p>
         Fagner será desfalque no <strong>Cruzeiro</strong> pelas próximas semanas. O lateral-direito teve <strong>confirmada fratura na fíbula da perna direita</strong>, sofrida após entrada do atacante <strong>William Pottker</strong>, durante o jogo contra o CRB, na quarta-feira, pela Copa do Brasil. 
     <p>
@@ -54,3 +59,17 @@
             <li>Internacional (fora) - 14/10</li>
         </ul>
     </p>
+    </body>
+</article>
+
+</main>
+
+    <footer>
+        <p> Redes sociais</p>
+        <ul>
+            <li><a href="https://www.instagram.com/globoesporte/">Instagram</a></li>
+            <li><a href="https://twitter.com/globoesporte">Twitter</a></li>
+            <li><a href="https://www.facebook.com/globoesporte">Facebook</a></li>
+        <p>Fonte: Globo Esporte</p>
+        <p>Data: 29/09/2023</p> 
+    </footer>
