--- a/noticia.html
+++ b/noticia.html
@@ -6,12 +6,13 @@
   <body>
      <header>
            <img src="https://play-lh.googleusercontent.com/KfvtW0lJMkgHPPz9b9BL9F5dAWK5x-AXUzePkdjmU9TLKaPl9zVEF_rIDRJZ_3_VA5fC=s256-rw"/>
-           <h1>Fagner, do Cruzeiro, sofre fratura após entrada de Pottker e vira desfalque para sequência</h1>
-    </header>
+           <h1>B7 News</h1>    
+      </header>
        
      <main> 
           <article>
-              <h2>Lateral se machucou na partida contra o CRB, na quarta-feira, pela Copa do Brasil; ele e atacante adversário trocaram acusações após o jogo</h2>
+            <h2>Fagner, do Cruzeiro, sofre fratura após entrada de Pottker e vira desfalque para sequência</h2>
+            <h3>Lateral se machucou na partida contra o CRB, na quarta-feira, pela Copa do Brasil; ele e atacante adversário trocaram acusações após o jogo</h3>
               
               <p>
                 Fagner será desfalque no <strong>Cruzeiro</strong> pelas próximas semanas. O lateral-direito teve <strong>confirmada fratura na fíbula da perna direita</strong>, sofrida após entrada do atacante <strong>William Pottker</strong>, durante o jogo contra o CRB, na quarta-feira, pela Copa do Brasil. 
